tests/snapshots/lib__snapshots__legacy_filter@parse_spec_blank_level_isolated_blank_comma.env_filter.snap
---
source: tests/snapshots.rs
expression: "     ,"
---
Filter {
    scope: ThreadLocal { local_data: None },
    statics: DirectiveSet {
        directives: SortedSet {
            set: SortedVec {
                vec: [],
            },
        },
        level: LevelFilter::OFF,
    },
    dynamics: DirectiveSet {
        directives: SortedSet {
            set: SortedVec {
                vec: [],
            },
        },
        level: LevelFilter::OFF,
    },
    by_id: RwLock {
        data: {},
        poisoned: false,
        ..
    },
    by_cs: RwLock {
        data: {},
        poisoned: false,
        ..
    },
}
