tests/snapshots/lib__snapshots__legacy_filter@parse_spec_blank_level_isolated_comma_only.env_filter.snap
---
source: tests/snapshots.rs
expression: ","
---
Filter {
    scope: ThreadLocal { local_data: None },
    statics: DirectiveSet {
        directives: SortedSet {
            set: SortedVec {
                vec: [
                    StaticDirective {
                        target: None,
                        fields: [],
                        level: LevelFilter::ERROR,
                    },
                ],
            },
        },
        level: LevelFilter::ERROR,
    },
    dynamics: DirectiveSet {
        directives: SortedSet {
            set: SortedVec {
                vec: [],
            },
        },
        level: LevelFilter::OFF,
    },
    by_id: RwLock {
        data: {},
        poisoned: false,
        ..
    },
    by_cs: RwLock {
        data: {},
        poisoned: false,
        ..
    },
}
