tests/snapshots/lib__snapshots__legacy_filter@parse_spec_global.env_filter.snap
---
source: tests/snapshots.rs
expression: "warn,crate2=debug"
---
Filter {
    scope: ThreadLocal { local_data: None },
    statics: DirectiveSet {
        directives: SortedSet {
            set: SortedVec {
                vec: [
                    StaticDirective {
                        target: Some(
                            "crate2",
                        ),
                        fields: [],
                        level: LevelFilter::DEBUG,
                    },
                    StaticDirective {
                        target: None,
                        fields: [],
                        level: LevelFilter::WARN,
                    },
                ],
            },
        },
        level: LevelFilter::DEBUG,
    },
    dynamics: DirectiveSet {
        directives: SortedSet {
            set: SortedVec {
                vec: [],
            },
        },
        level: LevelFilter::OFF,
    },
    by_id: RwLock {
        data: {},
        poisoned: false,
        ..
    },
    by_cs: RwLock {
        data: {},
        poisoned: false,
        ..
    },
}
