tests/snapshots/lib__snapshots__legacy_filter@parse_spec_global_bare_warn_mixed.env_filter.snap
---
source: tests/snapshots.rs
expression: wArN
---
Filter {
    scope: ThreadLocal { local_data: None },
    statics: DirectiveSet {
        directives: SortedSet {
            set: SortedVec {
                vec: [
                    StaticDirective {
                        target: None,
                        fields: [],
                        level: LevelFilter::WARN,
                    },
                ],
            },
        },
        level: LevelFilter::WARN,
    },
    dynamics: DirectiveSet {
        directives: SortedSet {
            set: SortedVec {
                vec: [],
            },
        },
        level: LevelFilter::OFF,
    },
    by_id: RwLock {
        data: {},
        poisoned: false,
        ..
    },
    by_cs: RwLock {
        data: {},
        poisoned: false,
        ..
    },
}
