tests/snapshots/lib__snapshots__legacy_filter@parse_spec_string_level.env_filter.snap
---
source: tests/snapshots.rs
expression: "crate1::mod1=wrong,crate2=warn"
---
Filter {
    scope: ThreadLocal { local_data: None },
    statics: DirectiveSet {
        directives: SortedSet {
            set: SortedVec {
                vec: [
                    StaticDirective {
                        target: Some(
                            "crate2",
                        ),
                        fields: [],
                        level: LevelFilter::WARN,
                    },
                ],
            },
        },
        level: LevelFilter::WARN,
    },
    dynamics: DirectiveSet {
        directives: SortedSet {
            set: SortedVec {
                vec: [],
            },
        },
        level: LevelFilter::OFF,
    },
    by_id: RwLock {
        data: {},
        poisoned: false,
        ..
    },
    by_cs: RwLock {
        data: {},
        poisoned: false,
        ..
    },
}
